configs/keycloak/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak

spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:19.0.2
          imagePullPolicy: IfNotPresent
          args: ["start-dev"]
          ports:
          - name: http
            containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          ## volume mounts required when using H2 database
          # volumeMounts:
          #   - name: keycloak-data
          #     mountPath: /opt/jboss/keycloak/standalone/data
          # resources:
          #   requests:
          #     memory: "250Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "500Mi"
          #     cpu: "500m"
